--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,79 +1,123 @@
 name: Build and Release
 
 on:
-  push:
-    tags:
+  push: 
+    tags: 
       - 'v*'
   release:
-    types: [published]
+    types:  [published]
 
 permissions:
-  contents: write
+  contents:  write
 
-jobs:
+jobs: 
   build:
     strategy:
       matrix:
-        include:
-          - os: macos-latest
-            platform: darwin/universal
-            output: kiro-manager-darwin-universal
-            artifact_path: build/bin/kiro-manager-darwin-universal.zip
-          - os: ubuntu-22.04
+        include: 
+          - os:  macos-14
+            platform: darwin/arm64
+            output:  kiro-manager-darwin-arm64
+            artifact_name: kiro-manager-darwin-arm64.dmg
+          - os: macos-13
+            platform: darwin/amd64
+            output: kiro-manager-darwin-amd64
+            artifact_name: kiro-manager-darwin-amd64.dmg
+          - os:  ubuntu-22.04
             platform: linux/amd64
             output: kiro-manager-linux-amd64
-            artifact_path: build/bin/kiro-manager-linux-amd64
+            artifact_name: kiro-manager-linux-amd64
 
-    runs-on: ${{ matrix.os }}
+    runs-on:  ${{ matrix.os }}
 
-    steps:
-      - name: Checkout
+    steps: 
+      - name:  Checkout
         uses: actions/checkout@v4
 
       - name: Setup Go
         uses: actions/setup-go@v5
-        with:
-          go-version: '1.25.5'
+        with: 
+          go-version: '1.22'
 
-      - name: Setup Node.js
+      - name:  Setup Node.js
         uses: actions/setup-node@v4
-        with:
+        with: 
           node-version: '20'
 
       - name: Install Wails CLI
-        run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+        run:  go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
       - name: Install Linux Dependencies
-        if: runner.os == 'Linux'
+        if:  runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
 
+      - name: Install frontend dependencies
+        run:  |
+          cd frontend
+          npm install
+
       - name: Build
         run: wails build -platform ${{ matrix.platform }} -o ${{ matrix.output }}
 
-      - name: Package macOS app bundle
-        if: matrix.os == 'macos-latest'
-        run: ditto -c -k --sequesterRsrc --keepParent build/bin/kiro-manager.app build/bin/${{ matrix.output }}.zip
+      - name: List build output
+        run: ls -la build/bin/
 
-      - name: Upload Artifact
+      - name: Create DMG (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install create-dmg
+          create-dmg \
+            --volname "Kiro Manager" \
+            --volicon "build/appicon.png" \
+            --window-pos 200 120 \
+            --window-size 600 400 \
+            --icon-size 100 \
+            --icon "${{ matrix.output }}.app" 150 185 \
+            --app-drop-link 450 185 \
+            --no-internet-enable \
+            "${{ matrix.artifact_name }}" \
+            "build/bin/${{ matrix.output }}. app" || \
+          create-dmg \
+            --volname "Kiro Manager" \
+            --window-pos 200 120 \
+            --window-size 600 400 \
+            --icon-size 100 \
+            --app-drop-link 450 185 \
+            --no-internet-enable \
+            "${{ matrix. artifact_name }}" \
+            "build/bin/${{ matrix.output }}.app"
+
+      - name:  Upload macOS DMG Artifact
+        if: runner.os == 'macOS'
+        uses: actions/upload-artifact@v4
+        with:
+          name:  ${{ matrix.output }}
+          path: ${{ matrix.artifact_name }}
+
+      - name: Upload Linux Artifact
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.output }}
-          path: ${{ matrix.artifact_path }}
+          path: build/bin/${{ matrix.artifact_name }}
 
   release:
     needs: build
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Download All Artifacts
+    steps: 
+      - name:  Download All Artifacts
         uses: actions/download-artifact@v4
-        with:
+        with: 
           path: artifacts
 
+      - name:  List artifacts
+        run: find artifacts -type f
+
       - name: Create Release
-        uses: softprops/action-gh-release@v2
+        uses:  softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*
+          files:  artifacts/**/*
           generate_release_notes: true
